--- a/index.html
+++ b/index.html
@@ -3,42 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Godwin Kokoh | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Godwin Kokoh</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
             </ul>
         </nav>
     </header>
 
+    <section id="hero">
+        <h2>Hi, I'm Godwin</h2>
+        <p>A Frontend Developer skilled in HTML, CSS, JavaScript, and React.</p>
+        <a href="#projects" class="btn">View My Work</a>
+    </section>
+
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a short bio about yourself and your skills.</p>
+        <p>I'm passionate about building modern web applications...</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project-gallery">
-            <!-- Add project cards here -->
+        <div class="project">
+            <h3>Project Name</h3>
+            <p>Short description...</p>
+            <a href="#">Live Demo</a>
+            <a href="#">GitHub</a>
         </div>
     </section>
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Node.js</li>
+        </ul>
+    </section>
+
     <section id="contact">
-        <h2>Contact Me</h2>
-        <form id="contact-form">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
+        <h2>Contact</h2>
+        <p>Email: your@email.com</p>
+        <p>GitHub: <a href="#">github.com/yourprofile</a></p>
     </section>
 
     <script src="script.js"></script>
