--- a/index.html
+++ b/index.html
@@ -1,62 +1,62 @@
-<!DOCTYPE html>
+<!DOCTYPE<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Godwin Kokoh | Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Name | Full-Stack Developer</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h1>Godwin Kokoh</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header class="header">
+    <div class="container">
+      <h1>Your Name</h1>
+      <p class="tagline">Full-Stack Developer | Problem Solver | Creator</p>
+      <nav>
+        <a href="#projects">Projects</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <section id="hero">
-        <h2>Hi, I'm Godwin</h2>
-        <p>A Frontend Developer skilled in HTML, CSS, JavaScript, and React.</p>
-        <a href="#projects" class="btn">View My Work</a>
-    </section>
+  <section id="projects" class="section">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Expense Tracker App</h3>
+        <p>A full-stack PWA built with React, Node.js, and Firebase for tracking personal finances.</p>
+        <a href="#" target="_blank">Live Demo</a> | <a href="#" target="_blank">GitHub</a>
+      </div>
+      <div class="project">
+        <h3>Blog CMS</h3>
+        <p>Custom blog content manager using Django and PostgreSQL with user authentication.</p>
+        <a href="#" target="_blank">Live Demo</a> | <a href="#" target="_blank">GitHub</a>
+      </div>
+    </div>
+  </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm passionate about building modern web applications...</p>
-    </section>
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m a passionate full-stack developer with experience building responsive software and web applications from scratch. I specialize in MERN stack as well as Python, and API integration. I'm committed to delivering clean, maintainable code and solving real-world problems with scalable tech solutions.</p>
+    </div>
+  </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project Name</h3>
-            <p>Short description...</p>
-            <a href="#">Live Demo</a>
-            <a href="#">GitHub</a>
-        </div>
-    </section>
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:godwinkokoh1@gmail.com.com">godwinkokoh1@gmail.com.com</a></p>
+      <p>GitHub: <a href="https://github.com/geniusgodwin" target="_blank">yourusername</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/godwinkokoh" target="_blank">yourusername</a></p>
+    </div>
+  </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Node.js</li>
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your@email.com</p>
-        <p>GitHub: <a href="#">github.com/yourprofile</a></p>
-    </section>
-
-    <script src="script.js"></script>
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; 2025 Godwin Kokoh. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
