--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1>Your Name</h1>
+      <h1>Godwin Kokoh</h1>
       <p class="tagline">Full-Stack Developer | Problem Solver | Creator</p>
-      <nav>
-        <a href="#projects">Projects</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
     </div>
   </header>
 
   <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="project">
-        <h3>Expense Tracker App</h3>
-        <p>A full-stack PWA built with React, Node.js, and Firebase for tracking personal finances.</p>
-        <a href="#" target="_blank">Live Demo</a> | <a href="#" target="_blank">GitHub</a>
-      </div>
-      <div class="project">
-        <h3>Blog CMS</h3>
-        <p>Custom blog content manager using Django and PostgreSQL with user authentication.</p>
-        <a href="#" target="_blank">Live Demo</a> | <a href="#" target="_blank">GitHub</a>
-      </div>
-    </div>
-  </section>
+  <div class="container">
+    <h2>Projects</h2>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>I’m a passionate full-stack developer with experience building responsive software and web applications from scratch. I specialize in MERN stack as well as Python, and API integration. I'm committed to delivering clean, maintainable code and solving real-world problems with scalable tech solutions.</p>
+    <div class="project">
+      <h3>🌤️ Weather Checker App</h3>
+      <p>A sleek, mobile-friendly web application that allows users to check current weather conditions in any city. It fetches real-time weather data using an external API and displays temperature, humidity, and weather icons.</p>
+      <ul>
+        <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+        <li><strong>API:</strong> OpenWeatherMap API</li>
+        <li><strong>Tools:</strong> Fetch API, Async/Await</li>
+        <li><strong>Features:</strong> Real-time weather updates, responsive design, search with error handling</li>
+      </ul>
+      <p>
+        <a href="#" target="_blank">Live Demo</a> |
+        <a href="#" target="_blank">GitHub</a>
+      </p>
     </div>
-  </section>
 
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:godwinkokoh1@gmail.com.com">godwinkokoh1@gmail.com.com</a></p>
-      <p>GitHub: <a href="https://github.com/geniusgodwin" target="_blank">yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/godwinkokoh" target="_blank">yourusername</a></p>
+    <div class="project">
+      <h3>💰 Finance Tracker PWA</h3>
+      <p>A full-stack progressive web app that helps users track income and expenses, view their budget history, and access data offline. It syncs with Firebase in real time and can be installed on mobile devices like a native app.</p>
+      <ul>
+        <li><strong>Frontend:</strong> HTML, CSS, JavaScript</li>
+        <li><strong>Backend:</strong> Firebase Firestore (NoSQL DB)</li>
+        <li><strong>PWA:</strong> Manifest + Service Worker</li>
+        <li><strong>Tools:</strong> Firebase SDK, optional Chart.js, service worker for offline use</li>
+        <li><strong>Features:</strong> Add/edit/delete expenses, real-time sync, offline access, mobile installable</li>
+      </ul>
+      <p>
+        <a href="#" target="_blank">Live Demo</a> |
+        <a href="#" target="_blank">GitHub</a>
+      </p>
     </div>
-  </section>
+  </div>
+</section>
 
   <footer class="footer">
     <div class="container">
