--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
   </div>
 </section>
 
+ <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>I’m a passionate full-stack developer with experience building responsive web applications from scratch. I specialize in MERN stack (Mongo DB, Express.js, React.js, Node.js), Python, and API integration. I'm committed to delivering clean, maintainable code and solving real-world problems with scalable tech solutions.</p>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:godwinkokoh1@gmai.com">godwinkokoh1@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/geniusgodwin" target="_blank">yourusername</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/godwinkokoh" target="_blank">yourusername</a></p>
+    </div>
+  </section>
+
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 Godwin Kokoh. All rights reserved.</p>
