--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
   <section id="contact" class="section">
     <div class="container">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:godwinkokoh1@gmai.com">godwinkokoh1@gmail.com</a></p>
-      <p>GitHub: <a href="https://github.com/geniusgodwin" target="_blank">yourusername</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/godwinkokoh" target="_blank">yourusername</a></p>
+      <p>Email: <a href="mailto:godwinkokoh1@gmail.com">godwinkokoh1@gmail.com</a></p>
+      <p>GitHub: <a href="https://github.com/geniusgodwin" target="_blank">geniusgodwin</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/godwinkokoh" target="_blank">godwinkokoh</a></p>
     </div>
   </section>
 
